# accessiblesolutions

./: pyrightconfig.json
back/: main.py  model_factory.py  models.py  pyproject.toml  safe_agui_agent.py  tools.py
back/_legacy/content_team/: agents.py  graph.py  schemas.py
back/_legacy/employment_services/: agents.py  employment_profile.py  intake.py  tools.py
back/_legacy/employment_skills/: middleware.py
back/asses/: cat_engine.py  stealth_processor.py
back/assessment/: __init__.py  cat_engine.py  stealth_processor.py
back/curriculum/: profile.py  skill_graph.py
back/db/: agencies.db  client.py  db.py  schema_generalization.sql  seed_parser.py  seed_pipeline.py  tools_bridge.py
back/employment_skills/: skills.py  tool.py
back/middleware/: core.py  cross_provider.py
back/orchestration/: energy_engine.py  ikigai_engine.py  lesson_sequencer.py  momentum.py  session_manager.py  streak_engine.py  validator.py
back/praxis_app/: __init__.py  career.py  learning.py  resources.py  supervisor.py
back/scaffolding/: cog_load.py  fading.py  mastery.py  prompt_hierarchy.py  session_controller.py
back/services/: narration.py  narration_worker.py
back/teams/: assessment.py  coaching.py  content_generation.py  employment_services.py  gamification.py
back/teams/research/: research_agent.py  run_research.py  skill_chains.csv
back/tests/: test_employment_services_tools.py  test_praxis_app_agent_boundaries.py  test_research_agent_search_fallback.py
back/tools/: docker_computer.py  ipyrepl.py  tts.py
back/tools/playwright/: extract_text.py
(+137 files in other folders)
