[project]
name = "praxis"
version = "0.0.0"
description = "Learn or die trying."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "copilotkit>=0.1.78",
    "deepagents>=0.0.5",
    "duckduckgo-search>=8.1.1",
    "fastapi<0.116.0",
    "jupyter-client>=8.8.0",
    "langchain>=0.3",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=0.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=0.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.2",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
    "supabase>=2.28.0",
    "tavily-python>=0.7.23",
    "torch>=2.11.0",
    "uvicorn>=0.41.0",
]
